{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 17,
  "lineage": "9abe165f-0621-3fb4-3c21-e913c20c081d",
  "resources": [
    {
      "module": "module.hre-apps",
      "mode": "data",
      "type": "aws_vpc",
      "name": "hre-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873212398515:vpc/vpc-092767728d08cced7",
            "cidr_block": "10.170.1.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04e1475bb1634b3f8",
                "cidr_block": "10.170.1.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-58a8383f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092767728d08cced7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0629ded5b7e934e58",
            "owner_id": "873212398515",
            "state": "available",
            "tags": {
              "Name": "QAT-HRE",
              "env": "shared",
              "layer": "dev",
              "product": "core"
            }
          }
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre-bos",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-0bb6bde6fb2e6c5c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb6bde6fb2e6c5c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a65f886e95832640",
            "private_dns": "ip-10-170-1-73.ec2.internal",
            "private_ip": "10.170.1.73",
            "public_dns": "ec2-54-234-76-124.compute-1.amazonaws.com",
            "public_ip": "54.234.76.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f3bfebb90980c0c1",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-BOS-180",
              "Version": "180",
              "env": "n/a",
              "function": "bo-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-BOS-180",
              "Version": "180",
              "env": "n/a",
              "function": "bo-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-BOS-180",
              "env": "n/a",
              "function": "bo-hre",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-06a62f35cda74f2b2",
              "sg-0e4c37a2f57c17939"
            ]
          },
          "dependencies": [
            "module.hre-apps.data.aws_subnet_ids.hre-subnets"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre-core",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-03e8b249c79128a5b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e8b249c79128a5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05588f2e70ce019ee",
            "private_dns": "ip-10-170-1-223.ec2.internal",
            "private_ip": "10.170.1.223",
            "public_dns": "ec2-54-235-41-89.compute-1.amazonaws.com",
            "public_ip": "54.235.41.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cbd126e73b18f1a7",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-Core-180",
              "Version": "180",
              "env": "n/a",
              "function": "core-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-Core-180",
              "Version": "180",
              "env": "n/a",
              "function": "core-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-Core-180",
              "env": "n/a",
              "function": "core-hre",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-0781b23d49798a33e",
              "sg-0e4c37a2f57c17939"
            ]
          },
          "dependencies": [
            "module.hre-apps.data.aws_subnet_ids.hre-subnets",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre-general-worker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-0450c16506308b8c9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0450c16506308b8c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0301f8e35311c70f5",
            "private_dns": "ip-10-170-1-117.ec2.internal",
            "private_ip": "10.170.1.117",
            "public_dns": "ec2-54-160-197-163.compute-1.amazonaws.com",
            "public_ip": "54.160.197.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eb4e95650d1a9a7b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-General-Worker-180",
              "Version": "180",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-General-Worker-180",
              "Version": "180",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-General-Worker-180",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-0781b23d49798a33e",
              "sg-0e4c37a2f57c17939"
            ]
          },
          "dependencies": [
            "module.hre-apps.data.aws_subnet_ids.hre-subnets",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre-lb-bos",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-07ea58e43cae6e950",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ea58e43cae6e950",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0feeb13e9fea2348c",
            "private_dns": "ip-10-170-1-197.ec2.internal",
            "private_ip": "10.170.1.197",
            "public_dns": "ec2-34-201-63-200.compute-1.amazonaws.com",
            "public_ip": "34.201.63.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02dbd152be19eac5e",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-LB-BOS-180",
              "Version": "180",
              "env": "n/a",
              "function": "lb-bos",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-LB-BOS-180",
              "Version": "180",
              "env": "n/a",
              "function": "lb-bos",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-LB-BOS-180",
              "env": "n/a",
              "function": "lb-bos",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-013793023d30b3ce5",
              "sg-0781b23d49798a33e",
              "sg-0e4c37a2f57c17939"
            ]
          },
          "dependencies": [
            "module.hre-apps.data.aws_subnet_ids.hre-subnets",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre-special-worker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011ff2027e02f78e8",
            "arn": "arn:aws:ec2:us-east-1:873212398515:instance/i-09a8a305466b90302",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a8a305466b90302",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "gcdev",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fc98d43b8f8e9df3",
            "private_dns": "ip-10-170-1-174.ec2.internal",
            "private_ip": "10.170.1.174",
            "public_dns": "ec2-54-234-6-51.compute-1.amazonaws.com",
            "public_ip": "54.234.6.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-063ec50e493249a22",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003a31ec3c1a08185",
            "tags": {
              "Name": "QAT2-HRE-Special-Worker-180",
              "Version": "180",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tags_all": {
              "Name": "QAT2-HRE-Special-Worker-180",
              "Version": "180",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "QAT2-HRE-Special-Worker-180",
              "env": "n/a",
              "function": "worker-hre",
              "layer": "qat",
              "product": "hre"
            },
            "vpc_security_group_ids": [
              "sg-0781b23d49798a33e",
              "sg-0e4c37a2f57c17939"
            ]
          },
          "dependencies": [
            "module.hre-apps.data.aws_subnet_ids.hre-subnets",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-external-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873212398515:security-group/sg-0781b23d49798a33e",
            "description": "QAT2-HRE external access",
            "egress": [],
            "id": "sg-0781b23d49798a33e",
            "ingress": [],
            "name": "QAT2-HRE-EXT-SG-20220719221005668700000001",
            "name_prefix": "QAT2-HRE-EXT-SG-",
            "owner_id": "873212398515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QAT2-HRE-EXT-SG"
            },
            "tags_all": {
              "Name": "QAT2-HRE-EXT-SG"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-092767728d08cced7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-external-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outgoing",
            "from_port": 0,
            "id": "sgrule-3806206203",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0781b23d49798a33e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-external-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "118.69.35.205/32",
              "27.65.195.158/32",
              "184.69.72.190/32",
              "95.69.249.156/32",
              "128.0.169.65/32",
              "24.234.166.179/32",
              "54.173.212.103/32",
              "52.70.75.245/32",
              "18.162.78.188/32"
            ],
            "description": "SSH Access",
            "from_port": 22,
            "id": "sgrule-2028786694",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0781b23d49798a33e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "35.243.250.126/32"
            ],
            "description": "Zabbix Agent",
            "from_port": 10050,
            "id": "sgrule-1004306923",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0781b23d49798a33e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 10050,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-external-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-internal-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873212398515:security-group/sg-031a4bf3597780bed",
            "description": "QAT2-HRE internal access",
            "egress": [],
            "id": "sg-031a4bf3597780bed",
            "ingress": [],
            "name": "QAT2-HRE-INT-SG-20220719221005669500000003",
            "name_prefix": "QAT2-HRE-INT-SG-",
            "owner_id": "873212398515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QAT2-HRE-INT-SG"
            },
            "tags_all": {
              "Name": "QAT2-HRE-INT-SG"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-092767728d08cced7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-internal-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outgoing",
            "from_port": 0,
            "id": "sgrule-2703632423",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-031a4bf3597780bed",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_app-internal-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-internal-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_app-internal-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "HTTP Access",
            "from_port": 80,
            "id": "sgrule-4045727191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-031a4bf3597780bed",
            "self": false,
            "source_security_group_id": "sg-013793023d30b3ce5",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_app-internal-sg.aws_security_group.this",
            "module.hre-apps.module.hre_app-internal-sg.aws_security_group.this_name_prefix",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_lb-bos-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:873212398515:security-group/sg-013793023d30b3ce5",
            "description": "QAT2-HRE LB access",
            "egress": [],
            "id": "sg-013793023d30b3ce5",
            "ingress": [],
            "name": "QAT2-HRE-LB-SG-20220719221005669400000002",
            "name_prefix": "QAT2-HRE-LB-SG-",
            "owner_id": "873212398515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "QAT2-HRE-LB-SG"
            },
            "tags_all": {
              "Name": "QAT2-HRE-LB-SG"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-092767728d08cced7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_lb-bos-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outgoing",
            "from_port": 0,
            "id": "sgrule-1814500908",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-013793023d30b3ce5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.hre-apps.module.hre_lb-bos-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "118.69.35.205/32",
              "27.65.195.158/32",
              "184.69.72.190/32",
              "95.69.249.156/32",
              "128.0.169.65/32",
              "24.234.166.179/32",
              "54.173.212.103/32",
              "52.70.75.245/32",
              "18.162.78.188/32"
            ],
            "description": "SSH Access",
            "from_port": 443,
            "id": "sgrule-442538972",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-013793023d30b3ce5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this",
            "module.hre-apps.module.hre_lb-bos-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}